--- a/myindex.j2
+++ b/myindex.j2
@@ -1,3 +1,3 @@
 <h1> This is my index page </h1>
-<h1> This Node OS is: </h1>
-<h1> This Node JAVA package: </h1>
+<h1> This Node OS is:{{ansible_os_family}} </h1>
+<h1> This Node JAVA package: {{myjavapackonubuntu}} </h1>
